remove console log

--- a/views/layout/movieById-layout/comments.pug
+++ b/views/layout/movieById-layout/comments.pug
@@ -1,5 +1,5 @@
 .comments-container
-  if comments && comments.length > 0
+  if comments 
     each comment in comments
       .comment
         .user
