--- a/views/layout/general-layout/layout.pug
+++ b/views/layout/general-layout/layout.pug
@@ -5,6 +5,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="/static/css/style.css")
     title= title
+  style.
+    .nav-bare li ul{visibility: hidden;position: absolute;top: 100%;left: 1em;background: #e0e0e0;transform: scale(1, 0);transform-origin: top center; transition: all 200ms ease-in 300ms;display: inline-block;}
   body
     block body
       block header
