--- a/views/layout/movieByQuery-layout/sort-menu.pug
+++ b/views/layout/movieByQuery-layout/sort-menu.pug
@@ -1,29 +1,29 @@
 mixin sort-menu(route)
   if route && !(/search/.test(route))
-    - url = route.replace(/&?sort.[^\&]*/g, '').replace(/page=\d+/, 'page=0')
+    - url = route.replace(/&?sort.[^\&]*/g, '').replace(/&page=\d+/, '')
     .sort-menu
-      .sort-title Sort by: 
-      .sort-links  
-        a(href=`${url}&sort=title`) 
-          .sort-link title
-            if sort && sort['title'] == -1
-              span.arrow &#9660;
-            if sort && sort['title'] == 1
-              span.arrow &#9650;
-        a(href=`${url}&sort=year`)
-          .sort-link date 
-            if sort && sort['year'] == -1
-              span.arrow &#9660;
-            if sort && sort['year'] == 1
-              span.arrow &#9650;       
-        a(href=`${url}&sort=imdb.rating`) 
-          .sort-link rating 
-            if sort && sort['imdb.rating'] == -1
-              span.arrow &#9660;
-            if sort && sort['imdb.rating'] == 1
-              span.arrow &#9650;
-        
-        
+      a(href=`${url}&sort=title`) 
+        .sort-link title
+          if !sort
+            span.arrow &#9650;
+          if sort && sort.field == 'title' && sort.order == -1
+            span.arrow &#9660;
+          if sort && sort.field == 'title' && sort.order == 1
+            span.arrow &#9650;
+      a(href=`${url}&sort=year`)
+        .sort-link date 
+          if sort && sort.field === 'year' && sort.order == -1
+            span.arrow &#9660;
+          if sort && sort.field === 'year' && sort.order == 1
+            span.arrow &#9650;       
+      a(href=`${url}&sort=imdb.rating`) 
+        .sort-link rating 
+          if sort && sort.field === 'imdb.rating' && sort.order == -1
+            span.arrow &#9660;
+          if sort && sort.field === 'imdb.rating' && sort.order == 1
+            span.arrow &#9650;
+
+
 
     //- script.
     //-   const links = document.querySelectorAll('.sort-links a');
