--- a/views/layout/movieById-layout/video.pug
+++ b/views/layout/movieById-layout/video.pug
@@ -1,4 +1,4 @@
 .container-video
   .video-container
     div#player 
-      .youtube-video-here Youtube video here
+      img.loading(src="/static/images/spinner.gif")
