--- a/views/moviesByQuery.pug
+++ b/views/moviesByQuery.pug
@@ -9,7 +9,7 @@ block container
     if movies && movies.length > 1  
       +sort-menu(route)   
     +pages-nave(pages, currentPage, route) 
-    +section-header(title)
+    +section-header(headerTitle)
     if people
       .people-info
     +section-container(movies)
