--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ include ./layout/movieByQuery-layout/section-header.pug
 
 block container  
   main.main-container
-    +section-header('Movies')
+    //- +section-header('Movies')
     +section-container(movies)
-    +section-header('Series')
-    +section-container(series)
+    //- +section-header('Series')
+    //- +section-container(series)
